change the get selection page.

--- a/extension/chrome/content/delete-text.html
+++ b/extension/chrome/content/delete-text.html
@@ -41,7 +41,7 @@
 
     function deleteSelection(node) {
         var nsIEditor = Components.interfaces.nsIEditor;
-	node.QueryInterface(Components.interfaces.nsIDOMNSEditableElement)
+	node.QueryInterface(Components.interfaces.nsIDOMNSEditableElement);
 	node.editor.deleteSelection(nsIEditor.ePrevious, nsIEditor.eStrip);
     }
 
