--- a/extension/chrome/content/index.html
+++ b/extension/chrome/content/index.html
@@ -2,6 +2,8 @@
 <body>
 <ol>
 	<li><a href="delete-text.html">delete-text.html</a></li>
+	<li><a href="commit-text.html">commit-text.html</a></li>
+	<li><a href="get-selection-range.html">get-selection-range.html</a></li>
 <ol>
 </body>
 </html>
