update files related to get/set selection range.

--- a/extension/chrome/content/get-selection-range.html
+++ b/extension/chrome/content/get-selection-range.html
@@ -30,7 +30,7 @@ function getSelectionRange(element) {
         let range = win.document.createRange();
         range.setStart(element, 0);
         range.setEnd(sel.anchorNode, sel.anchorOffset);
-        documentEncoder.init(element.ownerDocument, "text/plain",
+        documentEncoder.init(win.document, "text/plain",
                      Ci.nsIDocumentEncoder.SkipInvisibleContent);
         documentEncoder.setRange(range);
         start = documentEncoder.encodeToString().length;
