--- a/extension/chrome/content/index.html
+++ b/extension/chrome/content/index.html
@@ -4,6 +4,7 @@
 	<li><a href="delete-text.html">delete-text.html</a></li>
 	<li><a href="commit-text.html">commit-text.html</a></li>
 	<li><a href="get-selection-range.html">get-selection-range.html</a></li>
+	<li><a href="set-selection-range.html">set-selection-range.html</a></li>
 <ol>
 </body>
 </html>
