add deleteSurroundingText page.

--- a/extension/chrome/content/index.html
+++ b/extension/chrome/content/index.html
@@ -1,10 +1,10 @@
 <html>
 <body>
 <ol>
-	<li><a href="delete-text.html">delete-text.html</a></li>
 	<li><a href="commit-text.html">commit-text.html</a></li>
 	<li><a href="get-selection-range.html">get-selection-range.html</a></li>
 	<li><a href="set-selection-range.html">set-selection-range.html</a></li>
+	<li><a href="delete-surrounding-text.html">delete-surrounding-text.html</a></li>
 <ol>
 </body>
 </html>
