add composition event test page.

--- a/extension/chrome/content/index.html
+++ b/extension/chrome/content/index.html
@@ -5,6 +5,7 @@
 	<li><a href="set-selection-range.html">set-selection-range.html</a></li>
 	<li><a href="delete-surrounding-text.html">delete-surrounding-text.html</a></li>
 	<li><a href="commit-text.html">commit-text.html</a></li>
+	<li><a href="composition.html">composition.html</a></li>
 <ol>
 </body>
 </html>
