add a hidden iframe to get-selection-range.html

--- a/extension/chrome/content/get-selection-range.html
+++ b/extension/chrome/content/get-selection-range.html
@@ -13,7 +13,7 @@
       <button type="button" onclick="getContentEditableText();">Text content</button>
     </p>
     <p>Content Editable with frame:
-      <span id="f" contenteditable="true">hello<iframe src="http://www.baidu.com/"></iframe></span>
+      <span id="f" contenteditable="true">hello<iframe src="http://www.baidu.com/">inside frame</iframe> boy <iframe src="http://www.google.com/" style="display:none">hidden frame</iframe></span>
       <button type="button" onclick="getContentEditableText2();">Text content</button>
     </p>
     <p>Selection Range: <span id="position"></span></p>
